--- a/testimonials-grid-section-main/index.html
+++ b/testimonials-grid-section-main/index.html
@@ -1,20 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | [Challenge Name Here]</title>
-   
-  <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+  <link
+    href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 
 </head>
+
 <body>
-  Daniel Clifford
-  Verified Graduate
+  <main>
+    <section class="box">
+
+      <div class="item">
+        <div class="item-head">
+          <img src="images/image-daniel.jpg" alt="profile">
+      
+          <h4>
+            Daniel Clifford <br>
+          <span> Verified Graduate</span>
+          </h4>
+        </div>
+          <h3>
+            I received a job offer mid-course, and the subjects I learned  were current, if not more so,
+            in the company I joined. I honestly feel I got every penny’s worth.
+          </h3>
+          <p>
+            “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a
+            transition and have heard some people who had an amazing experience here. I signed up
+            for the free intro course and found it incredibly fun! I enrolled shortly thereafter.
+            The next 12 weeks was the best - and most grueling - time of my life. Since completing
+            the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
+          </p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="item-head">
+          <img src="images/image-jonathan.jpg" alt="profile">
+          <h4>
+            Jonathan Walters <br>
+          <span> Verified Graduate</span>
+          </h4>
+        </div>
+          <h3>
+            The team was very supportive and kept me motivated
+          </h3>
+          <p>
+            “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer
+            for a big company. This was one of the best investments I’ve made in myself. ”
+          </p>
+        </div>
+      </div>
+
+      <div class="item">
+        <div class="item-head">
+          <img src="images/image-jeanette.jpg" alt="profile">
+          <h4>
+            Jeanette Harmon <br>
+          <span> Verified Graduate</span>
+          </h4>
+        </div>
+          <h3>
+            An overall wonderful and rewarding experience
+          </h3>
+          <p>
+            “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living
+            while doing something I love. ”
+          </p>
+        </div>
+      </div>
+
+      <div class="item">
+        <div class="item-head">
+          <img src="images/image-patrick.jpg" alt="profile">
+          <h4>
+            Patrick Abrams <br>
+          <span> Verified Graduate</span>
+          </h4>
+        </div>
+          <h3>
+
+            Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and
+            learning from their experiences was easy.
+          </h3>
+          <p>
+
+            “ The staff seem genuinely concerned about my progress which I find really refreshing. The program
+            gave me the confidence necessary to be able to go out in the world and present myself as a capable
+            junior developer. The standard is above the rest. You will get the personal attention you need from
+            an incredible community of smart and amazing people. ”
+          </p>
+        </div>
+      </div>
+
+      <div class="item">
+        <div class="item-head">
+          <img src="images/image-kira.jpg" alt="profile">
+          <h4>
+            Kira Whittle<br>
+          <span> Verified Graduate </span>
+          </h4>
+        </div>
+          <h3>
+            Such a life-changing experience. Highly recommended!
+          </h3>
+          <p>
+            “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from
+            professionals who can help me learn programming step by step. I was encouraged to enroll by a former
+            student of theirs who can only say wonderful things about the program. The entire curriculum and staff
+            did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team
+            project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial
+            could ever have. In fact, I’ve often referred to it during interviews as an example of my developent
+            experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers.
+            100% recommend! ”
+          </p>
+        </div>
+      </div>
+
+    </section>
+  </main>
+  <!-- Daniel Clifford
+<span> Verified Graduate</span>
 
   I received a job offer mid-course, and the subjects I learned were current, if not more so, 
   in the company I joined. I honestly feel I got every penny’s worth.
@@ -26,7 +141,7 @@
   the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
 
   Jonathan Walters
-  Verified Graduate
+<span> Verified Graduate</span>
 
   The team was very supportive and kept me motivated
 
@@ -34,7 +149,7 @@
   for a big company. This was one of the best investments I’ve made in myself. ”
 
   Jeanette Harmon
-  Verified Graduate
+<span> Verified Graduate</span>
 
   An overall wonderful and rewarding experience
 
@@ -42,7 +157,7 @@
   while doing something I love. ”
 
   Patrick Abrams
-  Verified Graduate
+<span> Verified Graduate</span>
 
   Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
   learning from their experiences was easy.
@@ -53,7 +168,7 @@
   an incredible community of smart and amazing people. ”
 
   Kira Whittle
-  Verified Graduate
+<span> Verified Graduate</span>
 
   Such a life-changing experience. Highly recommended!
 
@@ -64,7 +179,8 @@
   project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial 
   could ever have. In fact, I’ve often referred to it during interviews as an example of my developent 
   experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 
-  100% recommend! ”
+  100% recommend! ” -->
 
 </body>
+
 </html>
